@@ -27,6 +27,9 @@ Notes:
   multiple of sector size. Any other value will result in error 0x57
   (ERROR_INVALID_PARAMETER).
 
+20141229
+* updated dpkg files
+
 20141015
 * changes for deployment
 
